--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: #0f0f0f;
+  background-color: #000000;
   color: #fff;
 }
 
