--- a/src/Pages/login_and_register/Login.css
+++ b/src/Pages/login_and_register/Login.css
@@ -1,5 +1,5 @@
 .loginPage {
-  background-image: url("./footer-bg.jpg");
+  background-image: url("../login_and_register/footer-bg.jpg");
   background-size: cover;
   width: 100%;
   height: 830px;
