--- a/src/Pages/HomePage/HomePage.scss
+++ b/src/Pages/HomePage/HomePage.scss
@@ -1,5 +1,32 @@
-.homePage{
-    position: relative;
-    top: 60px;
+.homepage_container{
+    align-items: center;
+    justify-content: center;
+    .container_first_section{
+        background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)), url('./wallpaper.jpg');
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 600px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
+    .carousels{
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        margin-left: 15px;
+        margin-bottom: 15px;
+    }
+    .footer_section{
+        margin-top: 60px;
+    }
+    .custom-divider{
+        width: 50px;
+        margin: 0 auto;
+    }
+
     
-}               
+}
