--- a/src/Pages/MoviePage/MoviePage.scss
+++ b/src/Pages/MoviePage/MoviePage.scss
@@ -3,9 +3,8 @@
     flex-wrap: wrap;
     
     .movies_first_section{
-        background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)), url('./wallpaper(captain_marvel).jpg') ;
+        background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)), url('./497289.jpg') ;
         background-size: cover;
-        background-position: center;
         width: 100%;
         height: 600px;
         display: flex;
