--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,12 +1,12 @@
 .footer_container{
     background-image: url('./footer-bg.jpg');
     width: 100%;
-    height: 560px;
+    height: 280px;
     background-size: cover;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    font-size: 17px;
     .first_part{
         display: flex;
         flex-direction: column;
@@ -25,6 +25,19 @@
                 font-size: 30px;
                 font-weight: 800;
             }
+        }
+    }
+    .second_part{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        div{
+            display: flex;
+            gap: 10px;
+        }
+        .footer_icons{
+            display: flex;
+            gap: 7px;
         }
     }
 }
