--- a/src/Pages/HomePage/HomePage.scss
+++ b/src/Pages/HomePage/HomePage.scss
@@ -2,7 +2,7 @@
     align-items: center;
     justify-content: center;
     .container_first_section{
-        background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)), url('./wallpaper.jpg');
+        background-image: linear-gradient(to bottom, rgba(7, 7, 7, 0.538), rgb(7, 7, 7)), url('./zjgs096khv591.jpg');
         background-size: cover;
         background-position: center;
         width: 100%;
