--- a/src/Pages/MoviePage/MoviePage.scss
+++ b/src/Pages/MoviePage/MoviePage.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     
     .movies_first_section{
-        background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)), url('./wallpaper(captain_marvel).jpg') ;
+        background: linear-gradient(to bottom, rgba(7,7,7,0), rgba(7,7,7,1)), url('./wallpaper(captain_marvel).jpg') ;
         background-size: cover;
         background-position: center;
         width: 100%;
@@ -32,5 +32,12 @@
         border-radius: 12px;
         font-size: 16px;
         border: 2px red;
+        cursor: pointer;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+  }
     }
 }
