--- a/src/components/Cards/MovieCard.scss
+++ b/src/components/Cards/MovieCard.scss
@@ -21,3 +21,12 @@
         font-weight: 600;
     }
 }
+.card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+  
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    }
+  }
