--- a/src/components/Cards/TvCard.scss
+++ b/src/components/Cards/TvCard.scss
@@ -1,4 +1,5 @@
 .tv_card{
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,3 +22,12 @@
         font-weight: 600;
     }
 }
+.tv_card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+  
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    }
+  }
