--- a/src/components/SearchEngine/SearchEngine.scss
+++ b/src/components/SearchEngine/SearchEngine.scss
@@ -1,4 +1,8 @@
+.search-container {
+    position: relative; // Relative positioning for proper container layout
+  }
 .searched_data{
+    position: fixed;
     background-color: rgba($color: #000000, $alpha: 0.8);
     position: absolute;
     display: flex;
