--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,82 @@
-.footer_container{
+.footer_container {
     background-image: url('./footer-bg.jpg');
-    width: 100%;
-    height: 560px;
     background-size: cover;
+    background-position: center;
+    color: #fff;
+    padding: 60px 30px;
+    width: 100%;
     display: flex;
-    
+    justify-content: center;
+}
+
+.footer_wrapper {
+    width: 100%;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 40px;
+}
+
+.footer_column {
+    display: flex;
+    flex-direction: column;
+
+    h4 {
+        font-size: 20px;
+        margin-bottom: 16px;
+        color: #fff;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+
+        li {
+            margin-bottom: 8px;
+
+            a {
+                color: #ccc;
+                font-size: 18px;
+                text-decoration: none;
+
+                &:hover {
+                    color: #fff;
+                }
+            }
+        }
+    }
+
+    .footer_logo {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 16px;
+    }
+
+    .footer_about {
+        font-size: 18px;
+        color: #ccc;
+        line-height: 1.6;
+    }
+
+    .footer_socials {
+        display: flex;
+        gap: 20px;
+        margin-bottom: 10px;
+
+        a {
+            font-size: 28px;
+            color: #ccc;
+            transition: color 0.3s;
+
+            &:hover {
+                color: #fff;
+            }
+        }
+    }
+
+    .footer_note {
+        font-size: 18px;
+        color: #aaa;
+        margin-top: 10px;
+    }
 }
